# tcc_animmendation_recommendation

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: docker-compose.yml  entrypoint.sh
.docker/: .env.example  Dockerfile  docker-compose.yml
recommendation/: .editorconfig  grpc_code_gen.sh  pyproject.toml  requirements.txt
recommendation/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
recommendation/.docker/: Dockerfile  docker-compose.yml
recommendation/prisma/: partial_types.py  schema.prisma
recommendation/prisma/migrations/20221203034423_add_table_tracking/: migration.sql
recommendation/src/: main.py  server.py
recommendation/src/controllers/: recommender_controller.py
recommendation/src/data/: handlers.py  io.py
recommendation/src/entities/: anime.py  anime_rating.py  env.py  knn.py
recommendation/src/infra/grpc/: recommender.proto  recommender_pb2.py  recommender_pb2.pyi  recommender_pb2_grpc.py
recommendation/src/infrastructure/grpc/pb/: anime_pb2.py  anime_pb2_grpc.py
recommendation/src/infrastructure/grpc/protos/: anime.proto
recommendation/src/infrastructure/grpc/services/: anime_service.py
recommendation/src/infrastructure/grpc_config/pb/: anime_pb2.py  anime_pb2_grpc.py
recommendation/src/infrastructure/grpc_config/protos/: anime.proto
recommendation/src/services/: recommender_service.py
recommendation/src/usecase/: prepare_data.py
recommendation/src/utils/: converters.py  env.py  pg_conn.py  singleton_decorrator.py  timer.py
src/: server.py  (+1 more)
(+15 files in other folders)
